sf-hrms/force-app/main/default/objects/Loan_Repayment__c/Loan_Repayment__c.object-meta.xml
<CustomObject>
    <label>Loan Repayment</label>
    <nameField>
        <label>Repayment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Repayments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>