sf-hrms/force-app/main/default/objects/Loan_Repayment__c/fields/Loan__c.field-meta.xml
<CustomField><fullName>Loan__c</fullName><label>Loan</label><type>MasterDetail</type><referenceTo>Loan__c</referenceTo><relationshipLabel>Repayments</relationshipLabel><relationshipName>Repayments</relationshipName><writeRequiresMasterRead>false</writeRequiresMasterRead><reparentableMasterDetail>false</reparentableMasterDetail></CustomField>