sf-hrms/force-app/main/default/objects/Loan_Repayment__c/fields/Payroll_Cycle__c.field-meta.xml
<CustomField><fullName>Payroll_Cycle__c</fullName><label>Payroll Cycle</label><type>Lookup</type><referenceTo>Payroll_Cycle__c</referenceTo><relationshipLabel>Loan Repayments</relationshipLabel><relationshipName>Loan_Repayments</relationshipName></CustomField>